package com.ilike.template;

/**
 * 花生豆浆
 */
public class PennutSoyaMilk extends SoyaMilk {
    @Override
    public void addCondiments() {
        System.out.println("加入上好的花生");
    }
}
